--- a/DiageoMDMWeb/src/main/webapp/admin/parameter/filterQuerySegment.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/parameter/filterQuerySegment.xhtml
@@ -4,8 +4,8 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pe="http://primefaces.org/ui/extensions">
     <body>
 
         <ui:composition template="./../../WEB-INF/templates/diageoWebTemplate.xhtml">
@@ -42,6 +42,10 @@
                         <p:commandButton value="#{msg.btn_send}" styleClass="button" style="left: 0%" actionListener="#{segmentParametersBean.createParameter()}" 
                                          update="@form" process="@this"/>
                         <br/><br/>
+                        <h:commandLink>
+                            <p:graphicImage name="/images/iconos/xls.png" width="5%"/>
+                            <pe:exporter type="xlsx" target="dtQuerySegment"  fileName="#{msg.param}" pageOnly="false"/>
+                        </h:commandLink>
                         <p:dataTable id="dtQuerySegment" style="width: 98%" value="#{segmentParametersBean.listSubSegmentFiler}" var="paramSeg"
                                      paginatorAlwaysVisible="false" paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                      paginator="true" rows="10">
