--- a/DiageoMDMWeb/src/main/webapp/admin/subcanal/crearSubCanal.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/subcanal/crearSubCanal.xhtml
@@ -16,7 +16,7 @@
                         <br/>
                         <h:panelGroup id="pgChaDetalle" >
                             <h:panelGrid columns="2" style="width: 100%">
-                                <h:outputLabel value="#{msg.sub_can_nombre}" style="width: 30%"/>
+                                <p:outputLabel value="#{msg.sub_can_nombre}" style="width: 30%" for="itNombre"/>
                                 <h:panelGroup>
                                     <p:inputText id="itNombre" value="#{subChannelCrear.nombreSubChannel}" required="true" label="#{msg.sub_can_nombre}" style="width: 70%"/>
                                     <p:message for="itNombre"/>
