--- a/DiageoMDMWeb/src/main/webapp/admin/sales/formSales.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/sales/formSales.xhtml
@@ -18,7 +18,7 @@ and open the template in the editor.
         <br/>
         <h:panelGroup id="pgSales" style="width: 70%">
             <h:panelGrid columns="4" >
-                <h:outputLabel value="#{msg.sales_nombre}"/>
+                <p:outputLabel value="#{msg.sales_nombre}" for="itName"/>
                 <h:panelGroup>
                     <p:inputText id="itName" value="#{salesCreateBean.salesName}" required="true" label="#{msg.sales_nombre}" readonly="true"/>
                     <p:message for="itName"/>
