--- a/DiageoMDMWeb/src/main/webapp/admin/segmento/consultarSegmento.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/segmento/consultarSegmento.xhtml
@@ -26,20 +26,20 @@
                         <br/>
                         <p:dataTable id="dtChannel" value="#{segementoConsultarBean.listaSegmento}" var="seg" paginatorAlwaysVisible="false" rows="15"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     rendered="#{segementoConsultarBean.verDetalle}" paginator="true">
-                            <p:column headerText="#{msg.id}">
+                                     rendered="#{segementoConsultarBean.verDetalle}" paginator="true" filterEvent="enter">
+                            <p:column headerText="#{msg.id}" filterBy="#{seg.segmentId}" filterMatchMode="contains">
                                 <h:outputLabel value="#{seg.segmentId}"/>
                             </p:column>
-                            <p:column headerText="#{msg.seg_nombre}">
+                            <p:column headerText="#{msg.seg_nombre}" filterBy="#{seg.nameSegment}" filterMatchMode="contains">
                                 <h:outputLabel value="#{seg.nameSegment}"/>
                             </p:column>
-                            <p:column headerText="#{msg.athena_code}">
+                            <p:column headerText="#{msg.athena_code}" filterBy="#{seg.distri_1}" filterMatchMode="contains">
                                 <h:outputLabel value="#{seg.distri_1}"/>
                             </p:column>
-                            <p:column headerText="#{msg.can_canal}">
+                            <p:column headerText="#{msg.can_canal}" filterBy="#{seg.subChannelId.channelId.nameChannel}" filterMatchMode="contains">
                                 <h:outputLabel value="#{seg.subChannelId.channelId.nameChannel}"/>
                             </p:column>
-                            <p:column headerText="#{msg.sub_subcanal}">
+                            <p:column headerText="#{msg.sub_subcanal}" filterBy="#{seg.subChannelId.nameSubChannel}" filterMatchMode="contains">
                                 <h:outputLabel value="#{seg.subChannelId.nameSubChannel}"/>
                             </p:column>
                             <p:column headerText="#{msg.estado}" style="text-align: center" exportable="false">
