--- a/DiageoMDMWeb/src/main/webapp/admin/subsegmento/consultarSubSegmento.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/subsegmento/consultarSubSegmento.xhtml
@@ -26,29 +26,25 @@
                         <br/>
                         <p:dataTable id="dtChannel" value="#{subSegmentoConsultarBean.listaSubSegmentos}" var="seg" paginatorAlwaysVisible="false" rows="15"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     rendered="#{subSegmentoConsultarBean.verDetalle}" paginator="true" style="word-wrap: break-word;">
-                            <p:column headerText="#{msg.id}">
+                                     rendered="#{subSegmentoConsultarBean.verDetalle}" paginator="true" style="word-wrap: break-word;" filterEvent="enter">
+                            <p:column headerText="#{msg.id}" filterBy="" filterMatchMode="contains">
                                 <h:outputLabel value="#{seg.subSegmentId}"/>
                             </p:column>
-                            <p:column headerText="#{msg.sub_seg_nombre}">
+                            <p:column headerText="#{msg.sub_seg_nombre}" filterBy="#{seg.nameSubsegment}" filterMatchMode="contains">
                                 <h:outputLabel value="#{seg.nameSubsegment}"/>
                             </p:column>
-                            <p:column headerText="#{msg.athena_code}">
+                            <p:column headerText="#{msg.athena_code}" filterBy="#{seg.distri_1}" filterMatchMode="contains">
                                 <h:outputLabel value="#{seg.distri_1}"/>
                             </p:column>
-                            <p:column headerText="#{msg.seg_segmento}">
+                            <p:column headerText="#{msg.seg_segmento}" filterBy="#{seg.segmentId.nameSegment}" filterMatchMode="contains">
                                 <h:outputLabel value="#{seg.segmentId.nameSegment}"/>
                             </p:column>
-                            <p:column headerText="#{msg.can_canal}">
+                            <p:column headerText="#{msg.can_canal}" filterBy="#{seg.segmentId.subChannelId.channelId.nameChannel}" filterMatchMode="contains">
                                 <h:outputLabel value="#{seg.segmentId.subChannelId.channelId.nameChannel}"/>
                             </p:column>
-                            <p:column headerText="#{msg.sub_subcanal}">
+                            <p:column headerText="#{msg.sub_subcanal}" filterBy="#{seg.segmentId.subChannelId.nameSubChannel}" filterMatchMode="contains">
                                 <h:outputLabel value="#{seg.segmentId.subChannelId.nameSubChannel}"/>
-                            </p:column>
-                            <p:column headerText="#{msg.estado}" style="text-align: center" exportable="false">
-                                <p:graphicImage value="/resources/images/iconos/equis.png" width="20px" rendered="#{seg.stateSubSegment eq '0'}"/>
-                                <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{seg.stateSubSegment eq '1'}"/>
-                            </p:column>
+                            </p:column>                            
                             <p:column exportable="false">
                                 <p:commandLink value="#{msg.btn_detalle}" actionListener="#{subSegmentoConsultarBean.detalleSub(seg)}" 
                                                style="color: blue" process="@this" update="@form"/>
@@ -59,7 +55,7 @@
                         <h:panelGroup id="pg">                            
                             <h:panelGroup id="pgDetalle" rendered="#{!subSegmentoConsultarBean.verDetalle}" style="width: 100%">
                                 <h:panelGrid columns="2" style="width: 100%">
-                                    <h:outputLabel value="#{msg.sub_seg_nombre}" style="width: 30%"/>
+                                    <p:outputLabel value="#{msg.sub_seg_nombre}" style="width: 30%" for="itNombre"/>
                                     <h:panelGroup>
                                         <p:inputText id="itNombre" value="#{subSegmentoConsultarBean.nombre}" required="true" label="#{msg.sub_seg_nombre}" style="width: 70%"/>
                                         <p:message for="itNombre"/>
@@ -82,7 +78,7 @@
                                         <f:selectItems value="#{subSegmentoConsultarBean.listaSegmento}" var="subseg" itemLabel="#{subseg.nameSegment}"/>
                                     </p:selectOneMenu>
 
-                                    <h:outputLabel value="#{msg.athena_code}" style="width: 30%"/>
+                                    <p:outputLabel value="#{msg.athena_code}" style="width: 30%" for="itAthenaCode"/>
                                     <h:panelGroup>
                                         <p:inputText id="itAthenaCode" value="#{subSegmentoConsultarBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"
                                                      readonly="true"/>
