--- a/DiageoMDMWeb/src/main/webapp/outlet/crearOutlet.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/crearOutlet.xhtml
@@ -29,6 +29,18 @@
                     }
 
                 </style>
+                 <h:form id="pop">                    
+                    <p:dialog widgetVar="outletWithoutSubSegment" modal="true" appendTo="@(body)">        
+                        <p:outputLabel value="#{msg.msg_without_sub_segment}"/>
+                        <h:panelGrid columns="1">     
+                            <br/><br/>
+                            <p:commandButton value="#{msg.btn_acept}" type="button" 
+                                             styleClass="button"
+                                             style="left: 0%;width: 100% !important"
+                                             onclick="PF('outletWithoutSubSegment').hide()"/>
+                        </h:panelGrid>
+                    </p:dialog>
+                </h:form>
                 <h:form id="formOutlet">
                     <p:fieldset legend="#{msg.is_father}" style="width: 95%">
                         <h:panelGrid columns="4" style="width: 100%">
@@ -50,12 +62,13 @@
                             <h:panelGrid columns="4" style="width: 100%">
                                 <h:outputLabel value="#{msg.out_kiernan}" style="width: 100%;padding: 5%" styleClass="tamanio_letra_labels"/>
                                 <p:inputText value="#{outletCrearBean.kiernanId}"/>
-                                <h:outputLabel value="#{msg.chain_business_name}" style="width: 100%;padding: 5%" styleClass="tamanio_letra_labels"/>
+                                <p:outputLabel value="#{msg.chain_business_name}" style="width: 100%;padding: 5%" styleClass="tamanio_letra_labels"
+                                               for="itBusinessName"/>
                                 <h:panelGroup>
                                     <p:inputText id="itBusinessName" value="#{outletCrearBean.businessName}" required="true" label="#{msg.chain_business_name}"/>
                                     <p:message for="itBusinessName"/>
                                 </h:panelGroup>
-                                <h:outputLabel value="#{msg.out_nit}" style="width: 100%;padding: 5%" styleClass="tamanio_letra_labels"/>
+                                <p:outputLabel value="#{msg.out_nit}" style="width: 100%;padding: 5%" styleClass="tamanio_letra_labels" for="itNit"/>
                                 <h:panelGroup>
                                     <p:inputText id="itNit" value="#{outletCrearBean.nit}" required="true" label="#{msg.out_nit}"/>
                                     <p:message for="itNit"/>
@@ -66,7 +79,8 @@
                                                  label="#{msg.out_verification_number}"/>
                                     <p:message for="itVerificationNumber"/>
                                 </h:panelGroup>
-                                <h:outputLabel value="#{msg.out_nombre}" style="width: 100%;padding: 5%" styleClass="tamanio_letra_labels"/>
+                                <h:outputLabel value="#{msg.out_nombre}" style="width: 100%;padding: 5%" styleClass="tamanio_letra_labels"
+                                               for="itOutName"/>
                                 <h:panelGroup>
                                     <p:inputText id="itOutName" value="#{outletCrearBean.outletName}" required="true" label="#{msg.out_nombre}"/>
                                     <p:message for="itOutName"/>
@@ -173,7 +187,7 @@
                             <h:panelGrid columns="3" style="width: 95%">
                                 <h:outputLabel value="#{msg.customer}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
                                 <p:autoComplete id="acCustomer" minQueryLength="4" value="#{outletCrearBean.customer}" label="#{msg.customer}"
-                                                var="cus" itemLabel="#{cus.customerName}" itemValue="#{cus}" forceSelection="true"
+                                                var="cus" itemLabel="#{cus.kiernanId} #{cus.customerName} #{cus.nit}" itemValue="#{cus}" forceSelection="true"
                                                 completeMethod="#{outletCrearBean.completeCustomer}" effect="fade" converter="customerConverter"
                                                 style="width: 90% !important;"/>
                                 <p:commandButton value="#{msg.btn_add}" process="@parent" update="formOutlet:pgCustomer formOutlet:acCustomer"     
@@ -269,8 +283,9 @@
                     </p:fieldset>
                     <br/><br/>
                     <p:commandButton value="#{msg.btn_send}" process="@all" update="@form" actionListener="#{outletCrearBean.saveOutlet()}"
-                                     styleClass="button"/>
+                                     styleClass="button" onclick="rcInactive()"/>
                     <br/>
+                    <p:remoteCommand actionListener="#{outletCrearBean.commandRemoteOutletInactive()}" name="rcInactive"/>
                 </h:form>
             </ui:define>
 
