--- a/DiageoMDMWeb/src/main/webapp/outlet/tablesOutlet/outletDataTableLazyDataModel.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/tablesOutlet/outletDataTableLazyDataModel.xhtml
@@ -8,16 +8,18 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">         
-    <!--h:commandLink rendered="{outletConsultarBean.renderDataTableLazyDataModel()}">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pe="http://primefaces.org/ui/extensions">            
+    <h:commandLink rendered="#{outletConsultarBean.renderDataTableLazyDataModel() and outletConsultarBean.renderExportExcel}">
         <p:graphicImage name="/images/iconos/xls.png" width="5%"/>
-        <pe:exporter type="xlsx" target="dtOutletNew"  fileName="Report" pageOnly="false"/>
-    </h:commandLink>-->
+        <pe:exporter type="xlsx" target="dtOutletNew"  fileName="Report" pageOnly="false" encoding="ISO-8859-1"/>
+    </h:commandLink>
     <h:commandLink id="clExportcsv" rendered="#{outletConsultarBean.renderDataTableLazyDataModel()}">
         <p:graphicImage name="/images/iconos/csv.png" width="5%"/>
-        <p:dataExporter type="csv" target="dtOutletNew" fileName="Report" pageOnly="false" />
+        <p:dataExporter type="csv" target="dtOutletNew" fileName="Report" pageOnly="false" encoding="ISO-8859-1"
+                        />
     </h:commandLink>
-    <p:tooltip for="clExportcsv" value="Export..."/>
+    <p:tooltip for="clExportcsv" value="#{msg.export}"/>
     <br/>
     <p:scrollPanel style="width:100%" rendered="#{outletConsultarBean.renderDataTableLazyDataModel()}" mode="native">
         <p:dataTable id="dtOutletNew" value="#{outletConsultarBean.outletsLazyDataModel}" var="outdtNew" paginatorAlwaysVisible="true" rows="15"
@@ -26,94 +28,153 @@ and open the template in the editor.
                      rendered="#{outletConsultarBean.renderDataTableLazyDataModel()}" paginator="true"
                      widgetVar="dtOutletSearch" lazy="true" 
                      emptyMessage="#{msg.out_msg_not_record}" filterEvent="enter" rowKey="#{outdtNew.outletId}"
-                     selectionMode="multiple" selection="#{outletConsultarBean.listOutletsFilter}"> 
+                     selectionMode="multiple" selection="#{outletConsultarBean.listOutletsFilter}" > 
             <p:ajax event="filter" listener="#{outletConsultarBean.listenerFilterList}"/>
             <p:column style="text-align: center" exportable="false" >
                 <p:commandLink value="#{msg.btn_edit}" style="color: blue" process="@all" update="@form"
-                               actionListener="#{outletConsultarBean.seeDetail(outdtNew)}" disabled="#{outdtNew.disabledButtonEdit}"/>
-                <br/><br/>
-                <h:panelGroup rendered="#{outdt.statusOutlet eq '4'}">
-                    <h:outputLabel id="labelRe" value="Detalle Rechazo" style="color: blue"/>
-                    <p:tooltip for="labelRe" value="#{outdtNew.rejectMessage}"/>
-                </h:panelGroup>
+                               actionListener="#{outletConsultarBean.seeDetail(outdtNew)}" disabled="#{outdtNew.disabledButtonEdit}"/>               
             </p:column>
-            <p:column headerText="#{msg.status}" filterMatchMode="exact" filterBy="#{outdtNew.statusMDM}" exportable="false" style="text-align: center">
+            <p:column headerText="#{msg.status}" filterMatchMode="exact" filterBy="#{outdtNew.statusMDM}" 
+                      exportable="true" style="text-align: center">
                 <f:facet name="filter">
-                    <p:selectOneMenu onchange="PF('dtOutletSearch').filter()" style="width: 80%">
+                    <p:selectOneMenu onchange="PF('dtOutletSearch').filter()" style="width: 80%">   
                         <f:selectItem itemLabel="#{msg.seleccion}" itemValue="#{null}" noSelectionOption="true"/>
-                        <f:selectItem itemValue="PENDING_TMC" itemLabel="#{msg.sta_pending_tmc}" />
-                        <f:selectItem itemValue="REJECT" itemLabel="#{msg.sta_reject}"/>
-                        <f:selectItem itemValue="PENDING_APPROVAL" itemLabel="#{msg.sta_pending_commercial_manager}"/>
-                        <f:selectItem itemValue="APPROVED" itemLabel="#{msg.sta_approval}"/>
+                        <f:selectItems value="#{outletConsultarBean.listFilterStatusMDM}"/>
                     </p:selectOneMenu>
                 </f:facet>
-                <h:outputLabel value="&lt;b&gt;#{msg.sta_reject}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'REJECT'}" style="color: red" escape="false"/>
-                <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_tmc}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'PENDING_TMC'}" style="color: blue" escape="false"/>
-                <h:outputLabel value="&lt;b&gt;#{msg.sta_pending_commercial_manager}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'PENDING_APPROVAL'}" style="color: sienna" escape="false"/>
-                <h:outputLabel value="&lt;b&gt;#{msg.sta_approval}&lt;/b&gt;" rendered="#{outdtNew.statusMDM eq 'APPROVED'}" style="color: green" escape="false"/>
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.status}"/>
+                </f:facet>
+                <h:outputLabel value="#{msg.sta_reject}" rendered="#{outdtNew.statusMDM eq 'REJECT'}" style="color: red" escape="false"/>
+                <h:outputLabel value="#{msg.sta_pending_tmc}" rendered="#{outdtNew.statusMDM eq 'PENDING_TMC'}" style="color: blue" escape="false"/>
+                <h:outputLabel value="#{msg.sta_pending_commercial_manager}" rendered="#{outdtNew.statusMDM eq 'PENDING_APPROVAL'}" style="color: sienna" escape="false"/>
+                <h:outputLabel value="#{msg.sta_approval}" rendered="#{outdtNew.statusMDM eq 'APPROVED'}" style="color: green" escape="false"/>
             </p:column>    
             <p:column headerText="#{msg.out_kiernan}" filterBy="#{outdtNew.kiernanId}" filterMatchMode="startsWith">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.out_kiernan}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.kiernanId}"/>
             </p:column>    
             <p:column headerText="#{msg.m_outlet} #{msg.id}" filterBy="#{outdtNew.outletId}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.m_outlet} #{msg.id}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.outletId}"/>
             </p:column>    
             <p:column headerText="#{msg.distri_father}" filterBy="#{outdtNew.outletIdFather.outletId}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.distri_father}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.outletIdFather.outletId}"/>
             </p:column> 
+            <p:column headerText="#{msg.code_pos_distributor}" filterBy="#{outdtNew.numberPdv}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.code_pos_distributor}"/>
+                </f:facet>
+                <h:outputLabel value="#{outdtNew.numberPdv}"/>
+            </p:column>
             <p:column headerText="#{msg.out_razon_social}" filterBy="#{outdtNew.businessName}" 
                       filterMatchMode="startsWith">                
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.out_razon_social}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.businessName}"/>
             </p:column>            
             <p:column headerText="#{msg.distri_outlet}" filterBy="#{outdtNew.db3PartyIdOld.name3party}">                
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.distri_outlet}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.db3PartyIdOld.name3party}"/>
             </p:column>            
             <p:column headerText="#{msg.sub_segment_diageo}" filterBy="#{outdtNew.subSegmentId.nameSubsegment}" filterMatchMode="startsWith">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.sub_segment_diageo}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.subSegmentId.nameSubsegment}"/>
             </p:column>            
             <p:column headerText="#{msg.sub_segment_distributor}" filterBy="#{outdtNew.distributorSubSegmentId.nameSubsegment}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.sub_segment_distributor}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.distributorSubSegmentId.nameSubsegment}"/>
             </p:column>
             <p:column headerText="#{msg.out_potencial}" filterBy="#{outdtNew.potentialId.namePotential}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.out_potencial}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.potentialId.namePotential}"/>
             </p:column>
             <p:column headerText="#{msg.out_nit}" filterBy="#{outdtNew.nit}" filterMatchMode="startsWith">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.out_nit}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.nit}"/>
             </p:column>
             <p:column headerText="#{msg.sales_code}" filterBy="#{outdtNew.db3partySaleId.pdv}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.sales_code}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.db3partySaleId.pdv}"/>
             </p:column>
             <p:column headerText="#{msg.sales_nombre}" filterBy="#{outdtNew.db3partySaleId.nameSales}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.sales_nombre}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.db3partySaleId.nameSales}"/>
-            </p:column>
-            <p:column headerText="#{msg.code_pos_distributor}" filterBy="#{outdtNew.numberPdv}">
-                <h:outputLabel value="#{outdtNew.numberPdv}"/>
-            </p:column>
+            </p:column>            
             <p:column headerText="#{msg.out_direccion}" filterBy="#{outdtNew.address}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.out_direccion}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.address}"/>
             </p:column>
             <p:column headerText="#{msg.chain_city}" filterBy="#{outdtNew.townId.nameTown}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.chain_city}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.townId.nameTown}"/>
             </p:column>
             <p:column headerText="#{msg.dis_commercial_management}" filterBy="#{outdtNew.db3PartyIdOld.db3partyRegionalId.nameRegional}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.dis_commercial_management}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.db3PartyIdOld.db3partyRegionalId.nameRegional}"/>
             </p:column>
             <p:column headerText="#{msg.loc_depto}" filterBy="#{outdtNew.townId.departamentId.nameDepartament}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.loc_depto}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.townId.departamentId.nameDepartament}"/>
             </p:column>
             <p:column headerText="#{msg.can_canal}" filterBy="#{outdtNew.subSegmentId.segmentId.subChannelId.channelId.nameChannel}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.can_canal}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.subSegmentId.segmentId.subChannelId.channelId.nameChannel}"/>
             </p:column>
             <p:column headerText="#{msg.sub_subcanal}" filterBy="#{outdtNew.subSegmentId.segmentId.subChannelId.nameSubChannel}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.sub_subcanal}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.subSegmentId.segmentId.subChannelId.nameSubChannel}"/>
             </p:column>
             <p:column headerText="#{msg.seg_segmento}" filterBy="#{outdtNew.subSegmentId.segmentId.nameSegment}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.seg_segmento}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.subSegmentId.segmentId.nameSegment}"/>
             </p:column>
             <p:column headerText="#{msg.status_2}" filterBy="#{outdtNew.statusOutlet}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.status_2}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.statusOutlet}"/>
             </p:column>
             <p:column headerText="#{msg.journey_plan}" filterBy="#{outdtNew.journeyPlan}">
+                <f:facet name="header">
+                    <h:outputLabel value="#{msg.journey_plan}"/>
+                </f:facet>
                 <h:outputLabel value="#{outdtNew.journeyPlan}"/>
             </p:column>
         </p:dataTable>
