--- a/DiageoMDMWeb/src/main/webapp/test.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/test.xhtml
@@ -5,12 +5,17 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
+    <h:head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+    </h:head>
+    <h:body>
+        <h:form>
+            <h:outputLabel value="#{testBean.nombre}"/>
+            <h:commandButton value="ok" actionListener="#{testBean.descargar()}"/>
+        </h:form>
+    </h:body>
 </html>
